--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
             Carlos Magno Marcondes
         </li>
+        <li>
+            Leandro Charleaux
+        </li>
     </ul>
 </body>
 </html>
