feat: meu nome rs

--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>topicos especiais fatec</title>
+    <title>Topicos Especiais FATEC</title>
 </head>
 <body>
     <h1>
-        Topicos especiais fatec - aula 3
+        Topicos especiais fatec - aula 2
     </h1>
     <ul>
         <li>
-            CI/CD
+            Carlos Magno Marcondes
+        </li>
+        <li>
+            Jan Nes
+        </li>
+        <li>
+            Leandro Charleaux
         </li>
     </ul>
 </body>
